# CodeTrace

./: .gitignore  CLAUDE.md  LICENSE  README-zh.md  README.md  pyproject.toml
.claude/agents/: architect-agent.md  audit-agent.md  coding-agent.md  prd-analyst-agent.md  qa-acceptance-agent.md  spec-builder-agent.md
.claude/commands/: accept.md  converge.md  generate-sa.md  generate-spec.md  implement.md  pipeline-init.md  prd-pipeline.md  seechen.md  slice-work.md  verify.md
.claude/docs/: Convergence-Loop.md  PRD-Pipeline-Interface.md  PRD-Pipeline-Refactor-Blueprint.md
.claude/memory/: convergence-state.md  frozen-decisions.md  implementation-log.md  open-questions.md  pipeline-state.md  workflow-memory.md
.claude/rules/: ai.md  doc-scope.md  rules.md  summary-sync.md
.codex/agents/: acceptance-agent.md  architect-agent.md  domain-planner-agent.md  domain-spec-agent.md  orchestrator-agent.md  research-agent.md  test-design-agent.md
.codex/commands/: generate-acceptance.md  generate-domain.md  generate-global.md  generate-ref.md  generate-tests.md  plan-docs.md  plan-domains.md
.codex/docs/: PRD-to-Coding-Orchestration.md  todo-plan.md
.codex/memory/: workflow-memory.md
.codex/rules/: agent-doc-size.md  ai.md  branch-selection.md  branch.md  commit.md  doc-scope.md  exceptions.md  ref-docs.md  rules.md  summary-sync.md  system-constraint-language.md  workflow.md
.github/rules/: agent-doc-size.md  doc-scope.md  ref-docs.md  (+3 more)
docs/: Case-Study.md  PRD-to-Coding-Orchestration.md  PRD.md  Workflow.md  todo-plan.md
specs/: summary.md
tests/: conftest.py
(+194 files in other folders)
