[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "codetrace"
version = "0.1.0"
description = "Lightweight, local-first, zero-dependency Python function-tracing framework."
requires-python = ">=3.10"
authors = [{ name = "LEE SEE CHEN" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
